# labelserver

./: API_DOCS.md  brother_ql_web.py  config.example.json  printer_configs.json  printer_discovery.py  printer_manager.py  printer_service.py  pyproject.toml  test_label_queue.py
views/: base.jinja2  printer_management.jinja2
