[project]
name = "labelserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.11",
    "asyncio>=3.4.3",
    "bottle>=0.13.2",
    "brother-ql>=0.9.4",
    "jinja2>=3.1.5",
    "pillow>=11.1.0",
    "python-dotenv>=1.0.1",
    "supabase>=2.11.0",
    "websockets>=13.1",
]
